--- a/package.json
+++ b/package.json
@@ -1,34 +1,73 @@
 {
-  "name": "with-typescript",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start",
-    "type-check": "tsc"
-  },
-  "dependencies": {
-    "@types/classnames": "^2.2.10",
-    "@zeit/next-sass": "^1.0.1",
-    "axios": "^0.20.0",
-    "classnames": "^2.2.6",
-    "js-sha512": "^0.8.0",
-    "jsonwebtoken": "^8.5.1",
-    "mobx": "^5.15.6",
-    "mobx-react": "^6.3.0",
-    "moment": "^2.27.0",
-    "next": "latest",
-    "node-sass": "^4.14.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-icons": "^3.11.0",
-    "secure-ls": "^1.2.6"
-  },
-  "devDependencies": {
-    "@types/node": "^12.12.21",
-    "@types/react": "^16.9.16",
-    "@types/react-dom": "^16.9.4",
-    "typescript": "4.0"
-  },
-  "license": "MIT"
+	"name": "with-typescript",
+	"version": "1.0.0",
+	"scripts": {
+		"dev": "next",
+		"build": "next build",
+		"start": "next start",
+		"type-check": "tsc"
+	},
+	"babel": {
+		"presets": [
+			"module:metro-react-native-babel-preset"
+		],
+		"env": {
+			"production": {}
+		},
+		"plugins": [
+			[
+				"@babel/plugin-proposal-decorators",
+				{
+					"legacy": true
+				}
+			],
+			[
+				"transform-inline-environment-variables",
+				{
+					"include": [
+						"NODE_ENV",
+						"API"
+					]
+				}
+			],
+			[
+				"@babel/plugin-proposal-optional-catch-binding"
+			]
+		]
+	},
+	"dependencies": {
+		"@babel/plugin-proposal-decorators": "^7.10.5",
+		"@class101/ui": "^8.5.0",
+		"@types/axios": "^0.14.0",
+		"@types/classnames": "^2.2.10",
+		"@types/core-decorators": "^0.20.0",
+		"@types/styled-components": "^5.1.3",
+		"@zeit/next-sass": "^1.0.1",
+		"axios": "^0.20.0",
+		"babel-plugin-transform-inline-environment-variables": "^0.4.3",
+		"classnames": "^2.2.6",
+		"core-decorators": "^0.20.0",
+		"js-sha512": "^0.8.0",
+		"jsonwebtoken": "^8.5.1",
+		"metro-react-native-babel-preset": "^0.63.0",
+		"mobx": "^5.15.6",
+		"mobx-react": "^6.3.0",
+		"moment": "^2.27.0",
+		"next": "latest",
+		"node-sass": "^4.14.1",
+		"react": "^16.12.0",
+		"react-dom": "^16.12.0",
+		"react-icons": "^3.11.0",
+		"react-router-dom": "^5.2.0",
+		"secure-ls": "^1.2.6",
+		"styled-components": "^5.2.0",
+		"sweetalert2": "^10.0.1"
+	},
+	"devDependencies": {
+		"@types/node": "^12.12.21",
+		"@types/react": "^16.9.16",
+		"@types/react-dom": "^16.9.4",
+		"typescript": "4.0"
+	},
+	"license": "MIT"
 }
