--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"react-bootstrap": "^1.3.0",
 		"react-dom": "^16.12.0",
 		"react-icons": "^3.11.0",
+		"react-notifications": "^1.6.0",
 		"react-router-dom": "^5.2.0",
 		"secure-ls": "^1.2.6",
 		"styled-components": "^5.2.0",
