--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"@types/classnames": "^2.2.10",
 		"@types/core-decorators": "^0.20.0",
 		"@types/react-router-dom": "^5.1.5",
+		"@types/react-toastify": "^4.1.0",
 		"@types/styled-components": "^5.1.3",
 		"@zeit/next-sass": "^1.0.1",
 		"axios": "^0.20.0",
@@ -63,9 +64,11 @@
 		"react-icons": "^3.11.0",
 		"react-notifications": "^1.6.0",
 		"react-router-dom": "^5.2.0",
+		"react-toastify": "^6.0.8",
 		"secure-ls": "^1.2.6",
 		"styled-components": "^5.2.0",
-		"sweetalert2": "^10.0.1"
+		"sweetalert2": "^10.0.1",
+		"time-counting": "^1.0.6"
 	},
 	"devDependencies": {
 		"@types/node": "^12.12.21",
